# Xpervia

./: .gitignore  CHANGELOG.md  DOCKER_COMMANDS.md  DOCKER_DEPLOYMENT.md  DOCKER_SUMMARY.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/api/: apps.py  celery.py  pagination.py  roles.py  signals.py  urls.py
backend/api/enums/: __init__.py  payment_status_enum.py  role_enum.py
backend/api/exceptions/: custom_exceptions.py  exception_handler.py  exceptions.py
backend/api/middlewares/: authentication.py
backend/api/migrations/: 0001_initial.py  0002_alter_chapter_course_content_alter_course_table.py  0002_alter_course_regis_start_date_and_more.py  0002_alter_enrollment_unique_together_and_more.py  0002_alter_user_options.py  0002_favorite.py  0003_alter_lesson_attachment_alter_lesson_chapter_and_more.py  0003_alter_user_options_alter_user_managers_and_more.py  0003_chapter.py  0003_coursecontent_thumbnail_url.py  0004_alter_course_thumbnail_id_lesson.py  0004_user_is_active.py  0005_alter_user_options_alter_user_table.py  0005_remove_user_is_active.py  0006_category_alter_chapter_options_alter_course_options_and_more.py  0006_user_is_active.py  0007_alter_user_options_alter_user_managers_and_more.py  0007_rename_teacher_course_teacher_id_and_more.py  0008_alter_user_role.py  (+12 more)
backend/backend/: settings.py  urls.py
backend/supabase_service/: auth.py  auth_view.py  authentication.py  file_url_view.py  storage.py  user_metadata.py
(+278 files in other folders)
