[project]
name = "xpervia-backend"
version = "0.1.0"
requires-python = ">=3.11, <3.12"
dependencies = [
    "Django==5.1.5",
    "djangorestframework==3.15.2",
    "psycopg2-binary==2.9.10",
    "django-cors-headers==4.7.0",
    "drf-yasg==1.21.10",
    "python-decouple==3.8",
    "pyjwt==2.9.0",
    "supabase==2.15.1",
    "underthesea==6.8.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "joblib==1.4.2",
    "django-celery-beat==2.7.0",
    "redis==5.2.1",
    "maturin>=1.0.0"
]

[tool.uv.extra-build-dependencies]
underthesea-core = ["maturin"]